Added new handler to return multiple structs
