# docs/swagger.json
@@ -233,7 +233,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get all users from DB and return as json",
+                "description": "Get one user`s profile from DB and return as json",
                 "produces": [
                     "application/json"
                 ],
@@ -245,7 +245,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/postgres.UserProfile"
                         }
                     }
                 }
@@ -293,6 +293,34 @@
                         "description": "Error setting the file size || Error parsing file",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/profiles": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all users from DB and return as json",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Метод для получения информации о профилях всех сотрудников",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/postgres.UserProfile"
+                            }
                         }
                     }
                 }
@@ -371,10 +399,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/user.UserDTO"
-                            }
+                            "$ref": "#/definitions/user.UserDTO"
                         }
                     },
                     "404": {
@@ -422,6 +447,40 @@
                 "skills": {
                     "type": "string",
                     "example": "Some skills"
+                }
+            }
+        },
+        "postgres.UserProfile": {
+            "description": "User profile information",
+            "type": "object",
+            "properties": {
+                "devices": {
+                    "type": "string",
+                    "example": ""
+                },
+                "display_name": {
+                    "type": "string",
+                    "example": "Зиннатуллин Эмиль Рамилевич"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "test@mail.ru"
+                },
+                "employee": {
+                    "type": "string",
+                    "example": "Go-developer"
+                },
+                "mobile_devices": {
+                    "type": "string",
+                    "example": "iphone 11"
+                },
+                "phone": {
+                    "type": "string",
+                    "example": "+79472738427"
+                },
+                "skills": {
+                    "type": "string",
+                    "example": "A lot of skills"
                 }
             }
         },
